Incorporate changes from geosolutions mapfish-print